[metadata]
name = nr_csi_pmi
version = attr: nr_csi_pmi.__version__
author = Michal Krugly
author_email = mickrugly@gmail.com
description = NR 3gpp CSI codebook typeII and typeII-rel16 (ref. TS 38.214 chap. 5.2.2.2.3 and 5.2.2.2.5) PMI coefficients and precoding matrix calculator
long_description = file: README.md
long_description_content_type = text/x-rst
license = Apache-2.0
license_files = [COPYING]
platform = any
keywords = 3gpp, NR, NewRadio, 5G, CSI, codebook, PMI, precoding
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: Apache License, Version 2.0
  Operating System :: OS Independent
  Programming Language :: Python
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Communications

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.10
setup_requires =
  setuptools >=39.2.0
install_requires =
  dataclasses
  numpy
  pandas

[options.packages.find]
where = src
